--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,3 +1,6 @@
+device: "cuda"
+fps: 30
+
 model:
   n_actions: 2
   n_temp_frames: 4
@@ -10,19 +13,18 @@ training:
   batch_size: 64
   replay_memory_size: 30000
   init_eps: 0.987
-  final_eps: 0.0001
+  final_eps: 0.00001
   threshold: 0.9
   num_steps: 4000000
   checkpoint_interval: 5000
-  replay_interval: 10000
+  replay_interval: 20000
   log_dir: "logs"
   log_interval: 200
   copy_interval: 10000
   save_path: "outputs"
 
-device: "cuda"
-
 game:
   bird_type: "yellowbird" # "bluebird", "redbird", "yellowbird"
   pipe_type: "green" # "green", "red"
   background_type: "day" # "day", "night"
+  show_background: False
