--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -15,17 +15,19 @@ training:
   init_eps: 0.987
   final_eps: 0.00001
   threshold: 0.9
-  self_training_ratio: 0.1
-  num_steps: 3000000
+  self_training_ratio: 0.0
+  num_steps: 2000000
   checkpoint_interval: 5000
   replay_interval: 20000
   log_dir: "logs"
   log_interval: 200
   copy_interval: 10000
   save_path: "outputs"
+  checkpoint_name: "checkpoint.pth"
 
 game:
   bird_type: "yellowbird" # "bluebird", "redbird", "yellowbird"
   pipe_type: "green" # "green", "red"
   background_type: "day" # "day", "night"
   show_background: False
+  show_point: False
