--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,5 @@
 device: "cuda"
-fps: 30
+fps: 120
 
 model:
   n_actions: 2
@@ -8,7 +8,7 @@ model:
 
 training:
   seed: 42
-  lr: 0.00003
+  lr: 0.00002
   gamma: 0.99
   batch_size: 64
   replay_memory_size: 30000
@@ -30,4 +30,4 @@ game:
   pipe_type: "green" # "green", "red"
   background_type: "day" # "day", "night"
   show_background: False
-  show_point: False
+  show_point: True
