--- a/configs/config_unlimited_no_bg.yaml
+++ b/configs/config_unlimited_no_bg.yaml
@@ -1,5 +1,5 @@
 device: "cuda"
-fps: 300
+fps: 120
 
 model:
   n_actions: 2
@@ -16,21 +16,21 @@ training:
   final_eps: 0.00001
   threshold: 0.9
   self_training_ratio: 0.0
-  num_steps: 1000000
+  num_steps: 2000000
   checkpoint_interval: 5000
   replay_interval: 20000
   log_dir: "logs"
   log_interval: 200
-  copy_interval: 5000
+  copy_interval: 10000
   save_dir: "outputs"
-  checkpoint_name: "full-bg"
+  checkpoint_name: "no-bg"
 
 test:
-  best_checkpoint: "full-bg-0000565000"
+  best_checkpoint: "no-bg-0000340000"
 
 game:
   bird_type: "yellowbird" # "bluebird", "redbird", "yellowbird"
   pipe_type: "green" # "green", "red"
   background_type: "day" # "day", "night"
-  show_background: True
+  show_background: False
   show_point: True
