--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,14 +1,14 @@
 device: "cuda"
-fps: 300
+fps: 60
 
 model:
   n_actions: 2
   n_temp_frames: 5
-  p_drop: 0.2
+  p_drop: 0.1
 
 training:
   seed: 42
-  lr: 0.0002
+  lr: 0.00001
   gamma: 0.99
   batch_size: 64
   replay_memory_size: 30000
@@ -16,21 +16,21 @@ training:
   final_eps: 0.00001
   threshold: 0.9
   self_training_ratio: 0.0
-  num_steps: 1000000
+  num_steps: 2000000
   checkpoint_interval: 5000
-  replay_interval: 30000
+  replay_interval: 20000
   log_dir: "logs"
   log_interval: 200
-  copy_interval: 5000
+  copy_interval: 10000
   save_dir: "outputs"
-  checkpoint_name: "full-bg"
+  checkpoint_name: "no-bg"
 
 test:
-  best_checkpoint: "full-bg-0000780000"
+  best_checkpoint: "no-bg-0000340000"
 
 game:
   bird_type: "yellowbird" # "bluebird", "redbird", "yellowbird"
   pipe_type: "green" # "green", "red"
   background_type: "day" # "day", "night"
-  show_background: True
+  show_background: False
   show_point: True
